# solana-Parier

./: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
app/: .env  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  utils.ts
app/public/: index.html  manifest.json
app/src/: App.tsx  Mediator.tsx  idl-localhost.json  idl.json  index.css  index.tsx
app/src/models/: asset-type.tsx  constants.tsx  contexts.tsx  user-account.tsx
app/src/pages/admin-page/: admin-page.tsx
app/src/pages/assets-page/: assets-page.tsx
app/src/pages/assets-page/components/: asset-card.tsx
app/src/pages/betting-page/: betting-page.scss  betting-page.tsx
app/src/pages/my-bets-page/: my-bets-page.tsx
app/src/shared/: toasts.tsx
app/src/shared/components/: connect-wallet-button.tsx  deposit-withdraw-dialog.tsx  new-account-dialog.tsx  svgs.tsx
app/src/shared/components/action-menu/: action-menu.tsx
app/src/shared/components/top-nav/: top-nav.scss  top-nav.tsx
app/src/stores/: stocks.tsx  user-state.tsx
programs/juicy-bets/: Cargo.toml
programs/juicy-bets/src/: lib.rs
tests/: juicy-bets.ts
